I think it works now, not sure though, have to get output to find out